--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@nuxtjs/toast": "^3.0.1",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-beta",
+    "cookieparser": "^0.1.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.6.1",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.0",
     "moment": "^2.22.2",
     "nuxt": "^2.0.0"
   },
